syntax = "proto3";

message AuthRequest {
  string email = 1;
  string password = 2;
  string user_type = 3;
}